feat: implement JWT authentication with role-based authorization