@@ -1,25 +1,31 @@
 package com.smartcafe.smartcafe.config;
 
+import com.smartcafe.smartcafe.model.User;
+import com.smartcafe.smartcafe.repository.UserRepository;
 import com.smartcafe.smartcafe.service.JwtService;
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
 import java.util.Collections;
+import java.util.List;
 
 @Component
 public class JwtFilter extends OncePerRequestFilter {
 
     private final JwtService jwtService;
+    private final UserRepository userRepository;
 
-    public JwtFilter(JwtService jwtService) {
+    public JwtFilter(JwtService jwtService, UserRepository userRepository) {
         this.jwtService = jwtService;
+        this.userRepository = userRepository;
     }
 
     @Override
@@ -41,13 +47,19 @@ public class JwtFilter extends OncePerRequestFilter {
             String token = authHeader.replace("Bearer ", "");
 
             try {
+                // 🔥 pegar email do token
                 String email = jwtService.validateToken(token);
 
+                // 🔥 buscar usuário no banco
+                User user = userRepository.findByEmail(email)
+                        .orElseThrow();
+
+                // 🔥 criar ROLE correta
                 UsernamePasswordAuthenticationToken auth =
                         new UsernamePasswordAuthenticationToken(
                                 email,
                                 null,
-                                Collections.emptyList()
+                                List.of(new SimpleGrantedAuthority("ROLE_" + user.getRole()))
                         );
 
                 SecurityContextHolder.getContext().setAuthentication(auth);
